[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Cédric Delval", email = ""},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
tools = [
    "black>=22.10.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
